kubernetes/3-service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: <<student_id>>-ninjavan
  name: memes-service
spec:
  type: NodePort
  selector:
    app: memes
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
